improve shading mariadb/mysql