@@ -10,8 +10,6 @@
 
   <artifactId>sdl-debezium_${scala.minor.version}</artifactId>
   <packaging>jar</packaging>
-
-
   <name>sdl-debezium</name>
 
   <profiles>
@@ -44,7 +42,6 @@
       <scope>${sdl-core.scope}</scope>
     </dependency>
 
-
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
@@ -70,98 +67,114 @@
       <version>${debezium.version}</version>
     </dependency>
 
+    <!-- debezium-connector-mariadb depends on an newer antlr4 version than Spark.
+         The debezium-connector-mariadb-shaded artifact includes the corresponding shaded, relocated antlr4 version. -->
+    <dependency>
+      <groupId>io.smartdatalake</groupId>
+      <artifactId>debezium-connector-mariadb-shaded</artifactId>
+      <version>${debezium.version}</version>
+      <optional>true</optional>
+    </dependency>
+
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-connector-postgres</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-connector-oracle</artifactId>
-      <version>${debezium.version}</version>
+      <version>3.1.0.Final</version>
+      <!-- debezium-connector-oracle depends on an newer antlr4 version than Spark.
+           As it also works without for SDLB, it is just excluded. -->
       <exclusions>
         <exclusion>
           <groupId>io.debezium</groupId>
           <artifactId>debezium-ddl-parser</artifactId>
         </exclusion>
-        <exclusion>
-          <groupId>org.antlr</groupId>
-          <artifactId>antlr4-runtime</artifactId>
-        </exclusion>
       </exclusions>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-connector-mongodb</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-connector-sqlserver</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-connector-db2</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-connector-vitess</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-connector-spanner</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
+    <!-- debezium-connector-mysql depends on an newer antlr4 version than Spark.
+         The debezium-connector-mysql-shaded artifact includes the corresponding shaded, relocated antlr4 version. -->
     <dependency>
       <groupId>io.smartdatalake</groupId>
-      <artifactId>sdl-debezium-connector-mysql-shaded</artifactId>
+      <artifactId>debezium-connector-mysql-shaded</artifactId>
       <version>${debezium.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>io.smartdatalake</groupId>
-      <artifactId>sdl-debezium-connector-mariadb-shaded</artifactId>
-      <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-storage-azure-blob</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-storage-jdbc</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-storage-redis</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-storage-rocketmq</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.debezium</groupId>
       <artifactId>debezium-storage-s3</artifactId>
       <version>${debezium.version}</version>
+      <optional>true</optional>
     </dependency>
     <!-- Debezium dependencies end -->
 
@@ -248,59 +261,140 @@
     </testResources>
 
     <plugins>
-        <!-- Compiles Scala sources. -->
-        <plugin>
-          <groupId>net.alchim31.maven</groupId>
-          <artifactId>scala-maven-plugin</artifactId>
-        </plugin>
+      <!-- Compiles Scala sources. -->
+      <plugin>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+      </plugin>
 
-        <!-- rewrite pom for compiling with different scala version profiles -->
-        <plugin>
-          <groupId>org.spurint.maven.plugins</groupId>
-          <artifactId>scala-cross-maven-plugin</artifactId>
-        </plugin>
+      <!-- rewrite pom for compiling with different scala version profiles -->
+      <plugin>
+        <groupId>org.spurint.maven.plugins</groupId>
+        <artifactId>scala-cross-maven-plugin</artifactId>
+      </plugin>
 
-        <!-- Copies files in resources folders to target folder. -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-        </plugin>
+      <!-- Copies files in resources folders to target folder. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+      </plugin>
 
-        <!-- Checks whether source files have the specified license header. -->
-        <plugin>
-          <groupId>com.mycila</groupId>
-          <artifactId>license-maven-plugin</artifactId>
-        </plugin>
+      <!-- Checks whether source files have the specified license header. -->
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+      </plugin>
 
-        <!-- Creates the jar without dependencies -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-        </plugin>
+      <!-- Creates the jar without dependencies -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+      </plugin>
 
-        <!-- Creates a JAR file with the source files of the project. -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-        </plugin>
+      <!-- Creates a JAR file with the source files of the project. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
 
-        <!-- Executes units tests with scalatest  -->
-        <plugin>
-          <groupId>org.scalatest</groupId>
-          <artifactId>scalatest-maven-plugin</artifactId>
-        </plugin>
+      <!-- Executes units tests with scalatest  -->
+      <plugin>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-maven-plugin</artifactId>
+      </plugin>
 
-        <!-- Checks for declared but unused and undeclared but used dependencies in the verify stage -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-        </plugin>
+      <!-- Checks for declared but unused and undeclared but used dependencies in the verify stage -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+      </plugin>
 
-        <!-- check for dependency version conflicts -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-enforcer-plugin</artifactId>
-        </plugin>
+      <!-- check for dependency version conflicts -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+      </plugin>
+
+      <!-- Integration Tests for MariaDB and MySQL must be run from command line, as IntelliJ doesn't handle classpath with shaded jars / dependency-reduced-pom's correctly
+           Run using mvn exec:exec@run-mariadb-it or mvn exec:exec@run-mysql-it in sql-debezium directory. -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>run-mariadb-it</id>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <phase>none</phase>
+            <configuration>
+              <executable>java</executable>
+              <longClasspath>true</longClasspath>
+              <arguments>
+                <argument>--add-exports</argument>
+                <argument>java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.net=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/sun.nio.cs=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/sun.security.action=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</argument>
+                <argument>-Dlog4j.configurationFile=log4j2.yml</argument>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>
+                  io.smartdatalake.workflow.dataobject.DebeziumCdcDataObjectMariaDBIT
+                </argument>
+              </arguments>
+              <classpathScope>test</classpathScope>
+            </configuration>
+          </execution>
+          <execution>
+            <id>run-mysql-it</id>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <phase>none</phase>
+            <configuration>
+              <executable>java</executable>
+              <longClasspath>true</longClasspath>
+              <arguments>
+                <argument>--add-exports</argument>
+                <argument>java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.net=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/sun.nio.cs=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/sun.security.action=ALL-UNNAMED</argument>
+                <argument>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</argument>
+                <argument>-Dlog4j.configurationFile=log4j2.yml</argument>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>
+                  io.smartdatalake.workflow.dataobject.DebeziumCdcDataObjectMySqlIT
+                </argument>
+              </arguments>
+              <classpathScope>test</classpathScope>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
 
   </build>
